# vibematcher

./: .gitignore  LICENSE  README.md  Taskfile.yaml  pyproject.toml
demo/: app.py
scripts/: compare.py  features.py  segment.py  similarity.py
src/vibematcher/: compare.py  compare_dtw.py  compare_wer.py  decisionmatrix.py  evaluate.py  fingerprint.py  mert_embedder.py  utils.py
src/vibematcher/chunking/: audio_chunks.py  song_former.py
src/vibematcher/compare/: compare.py  compare_embeddings.py  compare_f0.py  models.py
src/vibematcher/comparison/: compare.py
src/vibematcher/eval/: evaluate.py
src/vibematcher/f0/: f0_contour_cache.py  f0_wrapper.py  rmvpe.py
src/vibematcher/f0_extraction/: constants.py  deepunet.py  interference.py  loss.py  main.py  model.py  spec.py  utils.py
src/vibematcher/features/: f0_embedding.py  f0_sim.py  f0_wrapper.py  librosa_embedder.py  librosa_embedding.py  librosa_sim.py  melody_sim.py  mert_embedder.py  mert_embedding.py  rmvpe.py
src/vibematcher/features/librosa_features/: __init__.py  chroma_feature.py  mfcc_feature.py  rms_feature.py  spectral_centroid_feature.py
src/vibematcher/fingerprint/: f0_extractor.py  fingerprint.py  mert_embedder.py
src/vibematcher/mert/: mert_embedder.py  mert_embedding.py
src/vibematcher/muq/: muq_embedder.py  muq_embedding.py
src/vibematcher/pitch/: pitch_cache.py
src/vibematcher/stems/: demucs.py  stems_cache.py
test/: test.py
