[project]
name = "vibematcher"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "torchaudio",
    "soundfile",
    "demucs>=4.0.1",
    "torchcodec>=0.10.0",
    "librosa>=0.11.0",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = ["pre-commit>=4.5.0", "go-task-bin>=3.45.5"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
